--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Austin: Personal site and portfolio</title>
 </head>
 <body>
-    <h1>Austin</h1>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate temporibus nulla nihil minima laborum dolor hic, fugiat numquam assumenda in suscipit nesciunt, expedita laudantium quas repudiandae, asperiores itaque eos veniam.</p>
+    <h1>Austin's Personal site and portfolio</h1>
+    <p>Hi, I'm Austin. I'm try to create my first Personal / Project Portfolio Site. Check back some time later for updates.</p>
+    <img src="UnicornGundamStatue.jpg" alt="Unicorn Gundam Statue in Odaiba Tokyo">
+    <P>Please enjoy this picture I took of the Unicorn Gundam Statue in Odaiba Tokyo.</P>
 </body>
 </html>
