fixed image sizing

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Austin's Personal site and portfolio</h1>
     <p>Hi, I'm Austin. I'm try to create my first Personal / Project Portfolio Site. Check back some time later for updates.</p>
-    <img src="images/UnicornGundamStatue.JPG" alt="Unicorn Gundam Statue in Odaiba Tokyo">
+    <img src="images/UnicornGundamStatue.JPG" alt="Unicorn Gundam Statue in Odaiba Tokyo"style="width:500px;height:666px;">
     <P>Please enjoy this picture I took of the Unicorn Gundam Statue in Odaiba Tokyo.</P>
 </body>
 </html>
