--- a/index.html
+++ b/index.html
@@ -4,11 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Austin: Personal site and portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Austin's Personal site and portfolio</h1>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="cv/index.html">CV</a>
+        <a href="projects/index.html">Projects</a>
+        <a href="contact/index.html">Contact</a>
+        <a href="https://github.com/YoukaiKouhai" target="_blank">GitHub</a>
+    </nav>
     <p>Hi, I'm Austin. I'm try to create my first Personal / Project Portfolio Site. Check back some time later for updates.</p>
     <img src="images/UnicornGundamStatue.JPG" alt="Unicorn Gundam Statue in Odaiba Tokyo"style="width:500px;height:666px;">
-    <P>Please enjoy this picture I took of the Unicorn Gundam Statue in Odaiba Tokyo.</P>
+    <p>Please enjoy this picture I took of the Unicorn Gundam Statue in Odaiba Tokyo.</p>
+
 </body>
 </html>
