--- a/CV/index.html
+++ b/CV/index.html
@@ -51,7 +51,7 @@
 <body>                                                                            <!--<body>: Contains the visible content of the page.-->
   <nav>
     <a href="../index.html">Home</a>
-    <a href="../cv/index.html">CV</a>
+    <a href="../CV/index.html">CV</a>
     <a href="../projects/index.html">Projects</a>
     <a href="../contact/index.html">Contact</a>
     <a href="https://github.com/YoukaiKouhai" target="_blank">GitHub</a>
