--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Austin's Personal site and portfolio</h1>
     <nav>
         <a href="index.html">Home</a>
-        <a href="cv/index.html">CV</a>
+        <a href="CV/index.html">CV</a>
         <a href="projects/index.html">Projects</a>
         <a href="contact/index.html">Contact</a>
         <a href="https://github.com/YoukaiKouhai" target="_blank">GitHub</a>
