--- a/index.html
+++ b/index.html
@@ -1,23 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Austin: Personal site and portfolio</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Austin: Personal site and portfolio</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Austin's Personal site and portfolio</h1>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="CV/index.html">CV</a>
-        <a href="projects/index.html">Projects</a>
-        <a href="contact/index.html">Contact</a>
-        <a href="https://github.com/YoukaiKouhai" target="_blank">GitHub</a>
-    </nav>
-    <p>Hi, I'm Austin. I'm try to create my first Personal / Project Portfolio Site. Check back some time later for updates.</p>
-    <img src="images/UnicornGundamStatue.JPG" alt="Unicorn Gundam Statue in Odaiba Tokyo"style="width:500px;height:666px;">
-    <p>Please enjoy this picture I took of the Unicorn Gundam Statue in Odaiba Tokyo.</p>
+  <h1>Austin's Personal Site and Portfolio</h1>
 
+  <nav>
+    <ul>
+      <li><a href="index.html" class="current">Home</a></li>
+      <li><a href="CV/index.html">CV</a></li>
+      <li><a href="projects/index.html">Projects</a></li>
+      <li><a href="contact/index.html">Contact</a></li>
+      <li><a href="https://github.com/YoukaiKouhai" target="_blank">GitHub</a></li>
+    </ul>
+  </nav>
+
+  <p>Hi, I'm Austin. I'm trying to create my first personal/project portfolio site. Check back some time later for updates.</p>
+
+  <img class="centered-image"
+       src="images/UnicornGundamStatue.JPG"
+       alt="Unicorn Gundam Statue in Odaiba Tokyo">
+
+  <p class="caption">Please enjoy this picture I took of the Unicorn Gundam Statue in Odaiba Tokyo.</p>
 </body>
 </html>
