--- a/projects/index.html
+++ b/projects/index.html
@@ -15,6 +15,69 @@
   </nav>
 
   <h1>Projects</h1>
-  <p>Here's where projects will go.</p>
+    <p>Here's where projects will go.</p>
+  <div class="projects">
+    <article>
+      <h2>Lorem ipsum dolor sit.</h2>
+      <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero exercitationem consequatur magni, maiores, assumenda ullam doloribus dignissimos id quod similique debitis? Cumque id animi unde, suscipit ad sed perferendis ullam.</p>
+    </article>
+    <article>
+      <h2>Aliquam quaerat deleniti quia.</h2>
+      <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+      <p>Nostrum id voluptatibus, odio nihil accusantium minima sapiente itaque culpa dignissimos corporis porro! Cupiditate debitis sed, nihil quis perspiciatis sit dolores aliquam nulla eveniet tempore delectus nesciunt laborum sapiente! Reiciendis!</p>
+    </article>
+    <article>
+      <h2>Voluptatum labore accusamus fuga.</h2>
+      <img src="https://vis-society.github.io/labs/2/images/emapty.svg" alt="">
+      <p>Rem, suscipit fugit? Nesciunt distinctio nostrum ut qui ratione ad iste voluptate labore non eum eius doloribus maxime quisquam possimus culpa suscipit, odit repudiandae vitae magnam pariatur libero reprehenderit saepe.</p>
+    </article>
+    <article>
+      <h2>Tempore dolore sapiente fuga.</h2>
+      <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+      <p>Numquam eligendi cupiditate natus vel harum provident ducimus itaque cum libero quaerat fuga unde quae odio autem exercitationem, inventore corporis. Obcaecati ullam dicta mollitia minus ab pariatur, in nostrum placeat.</p>
+    </article>
+    <article>
+      <h2>Cupiditate non dolor laboriosam?</h2>
+      <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+      <p>Pariatur provident repudiandae, quos accusantium laudantium esse dicta ab ullam odit dignissimos nihil enim quo unde quibusdam eveniet exercitationem nulla incidunt suscipit est reiciendis. Amet incidunt modi deserunt sequi ea.</p>
+    </article>
+    <article>
+      <h2>Veniam eaque ea tenetur.</h2>
+      <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+      <p>Aspernatur dicta, maxime aut, fugiat cupiditate reiciendis impedit cum nulla ut delectus optio earum. Molestias dolorem laborum aut officia natus culpa modi debitis pariatur quaerat, veniam iusto non et. Nisi?</p>
+    </article>
+    <article>
+      <h2>Commodi eaque illum et?</h2>
+      <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+      <p>Sit quia magni a voluptate optio, reiciendis veniam tempora! Fuga fugit adipisci, quo maxime, impedit consequatur in, dolorem possimus molestiae totam inventore vitae similique aliquid itaque molestias aperiam reiciendis perspiciatis?</p>
+    </article>
+    <article>
+      <h2>Commodi quas sequi repellendus.</h2>
+      <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+      <p>Rerum ea iure vero est amet natus veniam voluptates repellat deserunt? Nobis quod sunt expedita fugit? Non suscipit nemo, quaerat tempore neque unde temporibus iusto repellat quia, maiores possimus. Facilis!</p>
+    </article>
+    <article>
+      <h2>Vero dicta animi eveniet?</h2>
+      <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+      <p>Deleniti laborum quidem, illum exercitationem, nihil, error eligendi voluptatem quaerat sunt illo cupiditate recusandae? Amet fugiat sed eum alias. Similique quod voluptates dolor deleniti harum tempore obcaecati, rerum soluta minima?</p>
+    </article>
+    <article>
+      <h2>Repudiandae nesciunt quibusdam error!</h2>
+      <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+      <p>Maiores animi illo reiciendis aliquam omnis officiis molestias incidunt numquam nesciunt, harum, at eaque dolores enim excepturi vero necessitatibus labore impedit voluptatum inventore modi iusto, facere blanditiis eos? Harum, rem.</p>
+    </article>
+    <article>
+      <h2>Nemo eveniet neque nihil.</h2>
+      <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+      <p>Laudantium nihil aliquid earum quod consectetur quis dolor. Eum ea laboriosam magni sint error autem ipsa officia facilis cum enim ipsam explicabo voluptatum, dignissimos repellendus veniam sit porro? Fuga, laborum?</p>
+    </article>
+    <article>
+      <h2>Excepturi nostrum laudantium qui?</h2>
+      <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+      <p>Nobis mollitia quia quae nesciunt ea iste itaque voluptate. Quam minus rem explicabo inventore, delectus aut possimus repellendus iusto placeat magnam aperiam eaque magni officiis dolores? Veniam facere beatae obcaecati.</p>
+    </article>
+  </div>
+
 </body>
 </html>
