--- a/contact/index.html
+++ b/contact/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Contact</title>
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" type="text/css" href="../CSS/style.css" />
 </head>
 <body>
   <nav>
