--- a/CV/index.html
+++ b/CV/index.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Austin's Personal Site</title>
-    <link rel="stylesheet" type="text/css" href="../style.css" />
+    <link rel="stylesheet" type="text/css" href="../styles.css" />
 </head>
 <body>
   <main>                                                                         
   <nav>
-    <a href="../index.html">Home</a>
-    <a href="../CV/index.html">CV</a>
-    <a href="../projects/index.html">Projects</a>
-    <a href="../contact/index.html">Contact</a>
-    <a href="https://github.com/YoukaiKouhai" target="_blank">GitHub</a>
+    <ul>
+      <li><a href="index.html" class="current">Home</a></li>
+      <li><a href="CV/index.html">CV</a></li>
+      <li><a href="projects/index.html">Projects</a></li>
+      <li><a href="contact/index.html">Contact</a></li>
+      <li><a href="https://github.com/YoukaiKouhai" target="_blank">GitHub</a></li>
+    </ul>
   </nav>
   <div class="resume">                                                          
       <h1>Austin Wong</h1>                                                      
