--- a/projects/index.html
+++ b/projects/index.html
@@ -3,15 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <title>Projects</title>
-  <link rel="stylesheet" type="text/css" href="../style.css" />
+  <link rel="stylesheet" type="text/css" href="../styles.css" />
 </head>
 <body>
   <nav>
-    <a href="../index.html">Home</a>
-    <a href="../CV/index.html">CV</a>
-    <a href="../projects/index.html">Projects</a>
-    <a href="../contact/index.html">Contact</a>
-    <a href="https://github.com/YoukaiKouhai" target="_blank">GitHub</a>
+    <ul>
+      <li><a href="index.html" class="current">Home</a></li>
+      <li><a href="CV/index.html">CV</a></li>
+      <li><a href="projects/index.html">Projects</a></li>
+      <li><a href="contact/index.html">Contact</a></li>
+      <li><a href="https://github.com/YoukaiKouhai" target="_blank">GitHub</a></li>
+    </ul>
   </nav>
 
   <h1>Projects</h1>
