--- a/projects/index.html
+++ b/projects/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <base href="/Project-Portfolio/" />
   <title>Projects</title>
   <link rel="stylesheet" type="text/css" href="../styles.css" />
 </head>
